#2366 Implemented GraphQL operator 'eq' for string-typed and entity-typed properties.